<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backg"
    android:orientation="vertical"
    android:paddingEnd="5dp"
    android:paddingStart="5dp"
    tools:context="cn.epicfx.winfxk.byenchant.adden.addEnchant" >

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:layout_weight="3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/qxzfmdj"
            android:textSize="15sp" />

        <SeekBar
            android:id="@+id/seekBar1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:max="5"
            android:progress="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/zdybfb"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:hint="@string/jsx"
            android:inputType="number"
            android:labelFor="@+id/editText"
            android:text="@string/edit1"
            android:textSize="15sp" />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00000000"
            android:contentDescription="@string/help"
            android:onClick="onImageButton"
            android:padding="3dp"
            android:scaleType="fitCenter"
            android:src="@drawable/help" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:layout_weight="10"
        android:orientation="horizontal" >

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginEnd="35dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/login_button"
            android:onClick="onClick"
            android:text="@string/ok" />
    </LinearLayout>

</LinearLayout>